# Manufacturing

./: README.md
Bill-of-Materials/: BOM_Analyzer.ipynb  README.md
bill-of-materials/: pyproject.toml
