[project]
name = "bill-of-materials"
version = "0.1.0"
description = ""
authors = [
    {name = "Kyle Wong",email = "115884650+kyrie0126@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "bill_of_materials", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
